# si-overseas-test

./: .env.prod.example  .env.staging.example  .gitignore  README.md  apifox_openapi.json  build.sh  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  index.html  index_aligned_to_doc (1)_pdf-ch5-8-en.html  justfile  mock-sn-fault-list.updated.xlsx  package-lock.json  package.json  tsconfig.app.json  vite.config.js  vite.config.ts
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  config.yaml  docker-compose copy.yml  docker-compose.yml  evaluate_all.py  openapi.json  pyproject.toml
backend/migrations/: env.py
backend/scripts/: check_db.py  create_mock_analytics.py  create_mock_records.py  debug_record.py  evaluate_vlm.py  generate_report_data.py  openapi_example.py  query_4sns_glucose.py  run-local.sh  seed.py  test_real_detection.py
backend/src/: main.py
backend/tests/: conftest.py  test_account_scope.py  test_agent.py  test_analytics.py  test_api_contracts.py  test_application_failure_skips_device_api.py  test_audit_logging.py  test_auth_user_creation.py  test_chat_persistence.py  test_chat_turns.py  test_delete_record.py  test_detection_performance.py  test_detection_vlm_refs.py  test_device_detection_resume.py  test_export_auth.py  test_file_binding.py  test_glucose_vlm_failures.py  test_logging.py  test_openapi_contracts.py  test_overseas_adapter.py  test_overseas_client_cache.py  test_overseas_client_concurrent_refresh.py  test_overseas_client_device_name.py  test_overseas_client_fallback.py  test_rules.py  (+9 more)
(+206 files in other folders)
