[tool.poetry]
name = "overseas-cgm-agent"
version = "0.1.0"
description = "Overseas CGM AI Servdesk Backend"
authors = ["Sibionics Dev <dev@sibionics.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
alembic = "1.17.2"
asyncpg = "0.31.0"
fastapi = "0.136.3"
greenlet = "3.3.0"
jinja2 = "^3.1"
bcrypt = "4.0.1"
passlib = { extras = ["bcrypt"], version = "1.7.4" }
PyJWT = "2.13.0"
pydantic = "2.13.4"
pydantic-settings = "2.12.0"
openai = "2.38.0"
langchain-openai = "1.2.2"
python-multipart = "0.0.21"
SQLAlchemy = "2.0.50"
uvicorn = { extras = ["standard"], version = "0.38.0" }
pyyaml = "^6.0.1"
pillow = "^12.2.0"
httpx = "^0.27"
oss2 = "^2.19.1"
langsmith = "^0.3"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
pytest-asyncio = "1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
